[gd_scene load_steps=3 format=3 uid="uid://d0rat0c8n0ry6"]

[ext_resource type="PackedScene" uid="uid://c8j2u4q3xk1mv" path="res://scenes/options_ui.tscn" id="1_options"]
[ext_resource type="Script" uid="uid://iqv6nixsfldx" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("options_ui", "main_buttons")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause")
options_ui = NodePath("CenterContainer/OptionsUI")
main_buttons = NodePath("CenterContainer/MainButtons")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = -960.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/MainButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="OptionsButton" type="Button" parent="CenterContainer/MainButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/MainButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit to Menu"

[node name="OptionsUI" parent="CenterContainer" instance=ExtResource("1_options")]
visible = false
layout_mode = 2

[connection signal="pressed" from="CenterContainer/MainButtons/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="visibility_changed" from="CenterContainer/OptionsUI" to="." method="_on_options_ui_visibility_changed"]
